--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
         "chart.js": "^2.7.1",
         "core-js": "^2.5.1",
         "font-awesome": "^4.7.0",
+        "js-sha1": "^0.6.0",
         "ng2-charts": "^1.6.0",
+        "ng2-truncate": "^1.3.11",
         "rxjs": "^5.5.2",
         "yarn": "^1.3.2",
         "zone.js": "^0.8.18"
