--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
         "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.8",
         "@ngx-translate/core": "^8.0.0",
         "@ngx-translate/http-loader": "^2.0.0",
+        "bootstrap-notify": "^3.1.3",
         "chart.js": "^2.7.1",
         "core-js": "^2.5.1",
         "font-awesome": "^4.7.0",
+        "jquery": "^3.2.1",
         "js-sha1": "^0.6.0",
         "ng2-charts": "^1.6.0",
         "ng2-truncate": "^1.3.11",
