--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
         "ng2-charts": "^1.6.0",
         "ng2-truncate": "^1.3.11",
         "rxjs": "^5.5.2",
+        "underscore": "^1.8.3",
         "yarn": "^1.3.2",
         "zone.js": "^0.8.18"
     },
@@ -44,6 +45,7 @@
         "@types/jasmine": "~2.6.3",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.0.51",
+        "@types/underscore": "^1.8.6",
         "codelyzer": "~4.0.1",
         "jasmine-core": "~2.8.0",
         "jasmine-spec-reporter": "~4.2.1",
