--- a/package.json
+++ b/package.json
@@ -25,11 +25,12 @@
         "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.8",
         "@ngx-translate/core": "^8.0.0",
         "@ngx-translate/http-loader": "^2.0.0",
+        "@types/underscore": "^1.8.7",
         "bootstrap-notify": "^3.1.3",
         "chart.js": "^2.7.1",
         "core-js": "^2.5.1",
         "font-awesome": "^4.7.0",
-        "jquery": "^3.2.1",
+        "jquery": "^3.3.1",
         "js-sha1": "^0.6.0",
         "ng2-charts": "^1.6.0",
         "ng2-truncate": "^1.3.11",
@@ -39,13 +40,12 @@
         "zone.js": "^0.8.18"
     },
     "devDependencies": {
-        "@angular/cli": "1.5.0",
+        "@angular/cli": "^1.5.0",
         "@angular/compiler-cli": "^5.0.1",
         "@angular/language-service": "^5.0.1",
         "@types/jasmine": "~2.6.3",
         "@types/jasminewd2": "~2.0.3",
         "@types/node": "~8.0.51",
-        "@types/underscore": "^1.8.6",
         "codelyzer": "~4.0.1",
         "jasmine-core": "~2.8.0",
         "jasmine-spec-reporter": "~4.2.1",
@@ -58,7 +58,6 @@
         "protractor": "~5.2.0",
         "ts-node": "~3.3.0",
         "tslint": "~5.8.0",
-        "typescript": "~2.4.2",
-        "webpack": "^3.10.0"
+        "typescript": "~2.4.2"
     }
 }
