--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "prestart": "echo \"export const versions = { hash: '$(git rev-parse --short HEAD)' };\" > ./src/environments/versions.ts",
         "start": "ng serve --ec true",
         "prebuild": "echo \"export const versions = { hash: '$(git rev-parse --short master)' };\" > ./src/environments/versions.ts",
-        "build": "ng build --prod",
+        "build": "ng build --prod --build-optimizer",
         "gitbuild": "ng build --prod --base /start-angular/SB-Admin-BS4-Angular-5/master/dist/",
         "test": "ng test",
         "lint": "ng lint",
