--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "scripts": {
         "ng": "ng",
-        "prestart": "echo \"export const versions = { hash: '$(git rev-parse --short HEAD)' };\" > ./src/environments/versions.ts",
+        "prestart": "echo \"export const versions = { hash: '' };\" > ./src/environments/versions.ts",
         "start": "ng serve --ec true",
         "prebuild": "echo \"export const versions = { hash: '$(git rev-parse --short master)' };\" > ./src/environments/versions.ts",
         "build": "ng build --prod --build-optimizer",
