--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "license": "MIT",
     "scripts": {
         "ng": "ng",
-        "start": "ng serve --ec true",
+        "start": "ng serve",
         "build": "ng build --prod --build-optimizer",
         "gitbuild": "ng build --prod --base /start-angular/SB-Admin-BS4-Angular-5/master/dist/",
         "test": "ng test",
@@ -13,51 +13,53 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^5.2.11",
-        "@angular/common": "^5.2.11",
-        "@angular/compiler": "^5.2.11",
-        "@angular/core": "^5.2.11",
-        "@angular/forms": "^5.2.11",
-        "@angular/http": "^5.2.11",
-        "@angular/platform-browser": "^5.2.11",
-        "@angular/platform-browser-dynamic": "^5.2.11",
-        "@angular/router": "^5.2.11",
-        "@ng-bootstrap/ng-bootstrap": "^1.1.1",
-        "@ngx-translate/core": "^8.0.0",
-        "@ngx-translate/http-loader": "^2.0.0",
-        "@types/underscore": "^1.8.7",
+        "@angular/animations": "^7.0.4",
+        "@angular/common": "^7.0.4",
+        "@angular/compiler": "^7.0.4",
+        "@angular/core": "^7.0.4",
+        "@angular/forms": "^7.0.4",
+        "@angular/http": "^7.0.4",
+        "@angular/platform-browser": "^7.0.4",
+        "@angular/platform-browser-dynamic": "^7.0.4",
+        "@angular/router": "^7.0.4",
+        "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+        "@ngx-translate/core": "^11.0.1",
+        "@ngx-translate/http-loader": "^4.0.0",
         "bootstrap-notify": "^3.1.3",
-        "chart.js": "^2.7.1",
+        "chart.js": "^2.7.3",
         "core-js": "^2.5.1",
         "font-awesome": "^4.7.0",
         "jquery": "^3.3.1",
         "js-sha1": "^0.6.0",
         "ng2-charts": "^1.6.0",
         "ng2-truncate": "^1.3.11",
-        "rxjs": "^5.5.2",
-        "underscore": "^1.8.3",
+        "rxjs": "^6.3.3",
+        "underscore": "^1.8.9",
+        "rxjs-compat": "^6.0.0-rc.0",
         "yarn": "^1.3.2",
         "zone.js": "^0.8.18"
     },
     "devDependencies": {
-        "@angular/cli": "^1.7.4",
-        "@angular/compiler-cli": "^5.2.11",
-        "@angular/language-service": "^5.2.11",
-        "@types/jasmine": "~2.6.3",
+        "@angular-devkit/build-angular": "~0.10.0",
+        "@angular/cli": "^7.0.6",
+        "@angular/compiler-cli": "^7.0.4",
+        "@angular/language-service": "^7.0.4",
+        "@types/jasmine": "~2.8.11",
         "@types/jasminewd2": "~2.0.3",
-        "@types/node": "~8.0.51",
-        "codelyzer": "~4.0.1",
-        "jasmine-core": "~2.8.0",
+        "@types/node": "~10.12.9",
+        "@types/underscore": "^1.8.9",
+        "codelyzer": "~4.5.0",
+        "jasmine-core": "~3.3.0",
         "jasmine-spec-reporter": "~4.2.1",
-        "karma": "~1.7.0",
+        "karma": "~3.1.1",
         "karma-chrome-launcher": "~2.2.0",
         "karma-cli": "~1.0.1",
-        "karma-coverage-istanbul-reporter": "^1.2.1",
-        "karma-jasmine": "~1.1.0",
-        "karma-jasmine-html-reporter": "^0.2.2",
-        "protractor": "~5.2.0",
-        "ts-node": "~3.3.0",
-        "tslint": "~5.8.0",
-        "typescript": "~2.4.2"
+        "karma-coverage-istanbul-reporter": "^2.0.4",
+        "karma-jasmine": "~2.0.0",
+        "karma-jasmine-html-reporter": "^1.4.0",
+        "protractor": "~5.4.1",
+        "ts-node": "~7.0.1",
+        "tslint": "~5.11.0",
+        "typescript": "~3.1.6"
     }
 }
