--- a/package.json
+++ b/package.json
@@ -13,51 +13,53 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^7.2.11",
-        "@angular/common": "^7.2.11",
-        "@angular/compiler": "^7.2.11",
-        "@angular/core": "^7.2.11",
-        "@angular/forms": "^7.2.11",
-        "@angular/http": "^7.2.11",
-        "@angular/platform-browser": "^7.2.11",
-        "@angular/platform-browser-dynamic": "^7.2.11",
-        "@angular/router": "^7.2.11",
-        "@ng-bootstrap/ng-bootstrap": "^4.0.0",
+        "@angular/animations": "^7.2.15",
+        "@angular/common": "^7.2.15",
+        "@angular/compiler": "^7.2.15",
+        "@angular/core": "^7.2.15",
+        "@angular/forms": "^7.2.15",
+        "@angular/http": "^7.2.15",
+        "@angular/platform-browser": "^7.2.15",
+        "@angular/platform-browser-dynamic": "^7.2.15",
+        "@angular/router": "^7.2.15",
+        "@ng-bootstrap/ng-bootstrap": "^4.2.2",
         "@ngx-translate/core": "^11.0.1",
         "@ngx-translate/http-loader": "^4.0.0",
         "bootstrap-notify": "^3.1.3",
-        "chart.js": "^2.7.3",
-        "core-js": "^2.5.1",
+        "chart.js": "^2.8.0",
+        "core-js": "^2.6.10",
         "font-awesome": "^4.7.0",
-        "jquery": "^3.3.1",
+        "gulp-sass": "^4.0.2",
+        "jquery": "^3.4.1",
         "js-sha1": "^0.6.0",
         "ng2-charts": "^1.6.0",
-        "ng2-truncate": "^1.3.11",
-        "rxjs": "^6.4.0",
+        "ng2-truncate": "^1.3.17",
+        "node-sass": "^4.13.0",
+        "rxjs": "^6.5.3",
+        "rxjs-compat": "^6.5.3",
         "underscore": "^1.8.9",
-        "rxjs-compat": "^6.0.0-rc.0",
-        "yarn": "^1.3.2",
-        "zone.js": "^0.8.18"
+        "yarn": "^1.19.1",
+        "zone.js": "^0.8.29"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "~0.10.0",
-        "@angular/cli": "^7.3.7",
-        "@angular/compiler-cli": "^7.2.11",
-        "@angular/language-service": "^7.2.11",
-        "@types/jasmine": "~2.8.11",
-        "@types/jasminewd2": "~2.0.3",
-        "@types/node": "~10.12.9",
-        "@types/underscore": "^1.8.9",
+        "@angular-devkit/build-angular": "^0.10.7",
+        "@angular/cli": "^7.3.9",
+        "@angular/compiler-cli": "^7.2.15",
+        "@angular/language-service": "^7.2.15",
+        "@types/jasmine": "^2.8.16",
+        "@types/jasminewd2": "^2.0.8",
+        "@types/node": "^10.12.30",
+        "@types/underscore": "^1.9.3",
         "codelyzer": "~4.5.0",
         "jasmine-core": "~3.3.0",
         "jasmine-spec-reporter": "~4.2.1",
-        "karma": "~3.1.1",
+        "karma": "^3.1.4",
         "karma-chrome-launcher": "~2.2.0",
         "karma-cli": "~1.0.1",
-        "karma-coverage-istanbul-reporter": "^2.0.4",
-        "karma-jasmine": "~2.0.0",
-        "karma-jasmine-html-reporter": "^1.4.0",
-        "protractor": "~5.4.1",
+        "karma-coverage-istanbul-reporter": "^2.1.0",
+        "karma-jasmine": "^2.0.1",
+        "karma-jasmine-html-reporter": "^1.4.2",
+        "protractor": "^5.4.2",
         "ts-node": "~7.0.1",
         "tslint": "~5.11.0",
         "typescript": "~3.1.6"
