--- a/package.json
+++ b/package.json
@@ -1,67 +1,66 @@
 {
-    "name": "autocoin-trader",
-    "version": "4.0.0",
-    "license": "MIT",
-    "scripts": {
-        "ng": "ng",
-        "start": "ng serve --poll 5000",
-        "build": "ng build --prod --build-optimizer",
-        "gitbuild": "ng build --prod --base /start-angular/SB-Admin-BS4-Angular-5/master/dist/",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e"
-    },
-    "private": true,
-    "dependencies": {
-        "@angular/animations": "^7.2.15",
-        "@angular/common": "^7.2.15",
-        "@angular/compiler": "^7.2.15",
-        "@angular/core": "^7.2.15",
-        "@angular/forms": "^7.2.15",
-        "@angular/http": "^7.2.15",
-        "@angular/platform-browser": "^7.2.15",
-        "@angular/platform-browser-dynamic": "^7.2.15",
-        "@angular/router": "^7.2.15",
-        "@ng-bootstrap/ng-bootstrap": "^4.2.2",
-        "@ngx-translate/core": "^11.0.1",
-        "@ngx-translate/http-loader": "^4.0.0",
-        "bootstrap-notify": "^3.1.3",
-        "chart.js": "^2.8.0",
-        "core-js": "^2.6.10",
-        "font-awesome": "^4.7.0",
-        "gulp-sass": "^4.0.2",
-        "jquery": "^3.4.1",
-        "js-sha1": "^0.6.0",
-        "ng2-charts": "^1.6.0",
-        "ng2-truncate": "^1.3.17",
-        "node-sass": "^4.13.0",
-        "rxjs": "^6.5.3",
-        "rxjs-compat": "^6.5.3",
-        "underscore": "^1.8.9",
-        "yarn": "^1.19.1",
-        "zone.js": "^0.8.29"
-    },
-    "devDependencies": {
-        "@angular-devkit/build-angular": "^0.10.7",
-        "@angular/cli": "^7.3.9",
-        "@angular/compiler-cli": "^7.2.15",
-        "@angular/language-service": "^7.2.15",
-        "@types/jasmine": "^2.8.16",
-        "@types/jasminewd2": "^2.0.8",
-        "@types/node": "^10.12.30",
-        "@types/underscore": "^1.9.3",
-        "codelyzer": "~4.5.0",
-        "jasmine-core": "~3.3.0",
-        "jasmine-spec-reporter": "~4.2.1",
-        "karma": "^3.1.4",
-        "karma-chrome-launcher": "~2.2.0",
-        "karma-cli": "~1.0.1",
-        "karma-coverage-istanbul-reporter": "^2.1.0",
-        "karma-jasmine": "^2.0.1",
-        "karma-jasmine-html-reporter": "^1.4.2",
-        "protractor": "^5.4.2",
-        "ts-node": "~7.0.1",
-        "tslint": "~5.11.0",
-        "typescript": "~3.1.6"
-    }
+  "name": "autocoin-trader",
+  "version": "4.0.0",
+  "license": "MIT",
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve --poll 5000",
+    "build": "ng build --prod --build-optimizer",
+    "gitbuild": "ng build --prod --base /start-angular/SB-Admin-BS4-Angular-5/master/dist/",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e"
+  },
+  "private": true,
+  "dependencies": {
+    "@angular/animations": "^8.2.12",
+    "@angular/common": "^8.2.12",
+    "@angular/compiler": "^8.2.12",
+    "@angular/core": "^8.2.12",
+    "@angular/forms": "^8.2.12",
+    "@angular/platform-browser": "^8.2.12",
+    "@angular/platform-browser-dynamic": "^8.2.12",
+    "@angular/router": "^8.2.12",
+    "@ng-bootstrap/ng-bootstrap": "^4.2.2",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
+    "bootstrap-notify": "^3.1.3",
+    "chart.js": "^2.8.0",
+    "core-js": "^2.6.10",
+    "font-awesome": "^4.7.0",
+    "gulp-sass": "^4.0.2",
+    "jquery": "^3.4.1",
+    "js-sha1": "^0.6.0",
+    "ng2-charts": "^1.6.0",
+    "ng2-truncate": "^1.3.17",
+    "node-sass": "^4.13.0",
+    "rxjs": "^6.5.3",
+    "rxjs-compat": "^6.5.3",
+    "underscore": "^1.8.9",
+    "yarn": "^1.19.1",
+    "zone.js": "~0.9.1"
+  },
+  "devDependencies": {
+    "@angular-devkit/build-angular": "~0.803.14",
+    "@angular/cli": "^8.3.14",
+    "@angular/compiler-cli": "^8.2.12",
+    "@angular/language-service": "^8.2.12",
+    "@types/jasmine": "^2.8.16",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^10.12.30",
+    "@types/underscore": "^1.9.3",
+    "codelyzer": "^5.0.1",
+    "jasmine-core": "~3.3.0",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "^3.1.4",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^2.1.0",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "^5.4.2",
+    "ts-node": "~7.0.1",
+    "tslint": "~5.11.0",
+    "typescript": "~3.5.3"
+  }
 }
