--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.12",
-    "@angular/common": "^8.2.12",
-    "@angular/compiler": "^8.2.12",
-    "@angular/core": "^8.2.12",
-    "@angular/forms": "^8.2.12",
-    "@angular/platform-browser": "^8.2.12",
-    "@angular/platform-browser-dynamic": "^8.2.12",
-    "@angular/router": "^8.2.12",
+    "@angular/animations": "^9.1.13",
+    "@angular/common": "^9.1.13",
+    "@angular/compiler": "^9.1.13",
+    "@angular/core": "^9.1.13",
+    "@angular/forms": "^9.1.13",
+    "@angular/localize": "^9.1.13",
+    "@angular/platform-browser": "^9.1.13",
+    "@angular/platform-browser-dynamic": "^9.1.13",
+    "@angular/router": "^9.1.13",
     "@ng-bootstrap/ng-bootstrap": "^5.1.2",
     "@ng-select/ng-select": "^3.7.1",
     "@ngx-translate/core": "^11.0.1",
@@ -37,20 +38,21 @@
     "node-sass": "4.13.0",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.5.3",
+    "tslib": "^1.10.0",
     "underscore": "^1.8.9",
     "yarn": "^1.19.1",
-    "zone.js": "~0.9.1"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.23",
-    "@angular/cli": "^8.3.14",
-    "@angular/compiler-cli": "^8.2.12",
-    "@angular/language-service": "^8.2.12",
+    "@angular-devkit/build-angular": "~0.901.15",
+    "@angular/cli": "^9.1.15",
+    "@angular/compiler-cli": "^9.1.13",
+    "@angular/language-service": "^9.1.13",
     "@types/jasmine": "^2.8.16",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^10.12.30",
+    "@types/node": "^12.11.1",
     "@types/underscore": "^1.9.3",
-    "codelyzer": "^5.0.1",
+    "codelyzer": "^5.1.2",
     "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.4.1",
@@ -62,6 +64,6 @@
     "protractor": "^5.4.2",
     "ts-node": "~7.0.1",
     "tslint": "~5.11.0",
-    "typescript": "~3.5.3"
+    "typescript": "~3.8.3"
   }
 }
