--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/common": "^9.1.13",
     "@angular/compiler": "^9.1.13",
     "@angular/core": "^9.1.13",
+    "@angular/cdk": "^9.1.13",
     "@angular/forms": "^9.1.13",
     "@angular/localize": "^9.1.13",
     "@angular/platform-browser": "^9.1.13",
@@ -26,6 +27,7 @@
     "@ng-select/ng-select": "^3.7.1",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@swimlane/ngx-charts": "^13.0.4",
     "bootstrap-notify": "^3.1.3",
     "chart.js": "^2.8.0",
     "core-js": "^2.6.10",
